Add personal-workstation package

--- a/xserver-xorg-core/mkdeb.cfg
+++ b/xserver-xorg-core/mkdeb.cfg
@@ -1,5 +1,5 @@
 [main]
-backend = deb-src
+generator = deb-src
 orig-package = xserver-xorg-core
 patch-command =
   patch -p1 < {config_dir}/lctrl-grab.diff
