Fix changelog and patch name for xorg-server

--- a/xorg-server/mkdeb.cfg
+++ b/xorg-server/mkdeb.cfg
@@ -1,5 +1,7 @@
 [main]
 generator = deb-src
-orig-package = xserver-xorg-core
+orig-package = xorg-server
+changelog =
+  Use right ctrl as grab/release key for Xephyr
 patch-command =
-  patch -p1 < {config_dir}/lctrl-grab.diff
+  patch -p1 < {config_dir}/xephyr-rctrl-grab-release.diff
