Add pavucontrol to personal-workstation

--- a/personal-workstation/template/control
+++ b/personal-workstation/template/control
@@ -50,6 +50,7 @@ Depends: autoconf,
          openssh-client,
          p7zip-full,
          pasystray,
+         pavucontrol,
          pcmanfm,
          pinentry-gtk2,
          pulseaudio,
