Fix package names

--- a/personal-workstation/mkdeb.cfg
+++ b/personal-workstation/mkdeb.cfg
@@ -2,5 +2,5 @@
 generator = dh-make
 template =
   {config_dir}/template
-package-name = personal-workstation
-package-version = 1
+package = personal-workstation
+version = 1
