--- a/qemu/mkdeb.cfg
+++ b/qemu/mkdeb.cfg
@@ -1,6 +1,6 @@
 [main]
 generator = deb-src
-orig-package = qemu
+package = qemu
 changelog =
   Apply apple-smc fix to allow sierra guests. More details: https://www.contrib.andrew.cmu.edu/~somlo/OSXKVM/
 patch-command =
