--- a/xorg-server/mkdeb.cfg
+++ b/xorg-server/mkdeb.cfg
@@ -1,6 +1,6 @@
 [main]
 generator = deb-src
-orig-package = xorg-server
+package = xorg-server
 changelog =
   Use right ctrl as grab/release key for Xephyr
 patch-command =
