--- a/mkdeb/stdeb.cfg
+++ b/mkdeb/stdeb.cfg
@@ -1,4 +1,5 @@
 [DEFAULT]
+Package3: mkdeb
 Depends3: python3-ush, lsb-release, dh-make, devscripts, apt-show-source,
   python3-stdeb, python-stdeb
 Section: devel
