Add include-deb-patterns for xorg-server/qemu

--- a/qemu/mkdeb.cfg
+++ b/qemu/mkdeb.cfg
@@ -5,3 +5,4 @@ changelog =
   Apply apple-smc fix to allow sierra guests. More details: https://www.contrib.andrew.cmu.edu/~somlo/OSXKVM/
 patch-command =
   patch -p1 < {config_dir}/apple-smc.diff
+include-deb-pattern = ^qemu-system-x86_
