--- a/xorg-server/mkdeb.cfg
+++ b/xorg-server/mkdeb.cfg
@@ -5,3 +5,4 @@ changelog =
   Use right ctrl as grab/release key for Xephyr
 patch-command =
   patch -p1 < {config_dir}/xephyr-rctrl-grab-release.diff
+include-deb-pattern = ^xserver-xephyr_
