Add dh-make upstream example with libmpack

--- a/personal-workstation/mkdeb.template/control
+++ b/personal-workstation/mkdeb.template/control
@@ -55,6 +55,7 @@ Depends: autoconf,
          bzr,
          cmake,
          git,
+         libtool-bin,
          python3-setuptools,
          python3-wheel,
          python3-stdeb,
